Fixed some issues, added new app-constants